# Neuroclues

./: CMakeLists.txt  File.h  LICENSE  NEurotrees.cpp  NEurotrees.h  README.md  Tree.h  config.h  csv.h  json.h  processed_data.csv  readme.txt  xml.h
samplefolder/: data.csv  example_1.json
